[문제 7] 친구별로 추천점수를 저장할 scoreCard, 각 친구리스트를 저장할 friendList 생성.