@@ -1,11 +1,14 @@
 package onboarding;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 public class Problem7 {
+    static Map<String, Integer> scoreCard = new HashMap<>();
+    static HashMap<String, Set<String>> friendList = new HashMap<>();
+
     public static List<String> solution(String user, List<List<String>> friends, List<String> visitors) {
-        List<String> answer = Collections.emptyList();
+
+        List<String> answer = List.of();
         return answer;
     }
 }
